--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(find_knee_pt)
 export(get_consensus)
 export(getconsensus)
 export(pcha)
+export(pcha_rust)
 export(seurat_magic)
 importFrom(GenomeInfoDb,Seqinfo)
 importFrom(GenomicRanges,GRanges)
