--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -11,12 +11,12 @@ name = 'rustytools'
 [dependencies]
 extendr-api = '*'
 bio-types = ">=0.12"
-ndarray        = { version = "0.16", features = ["blas", "rayon"] }
+ndarray        = { version = "0.15.2", features = ["blas", "rayon"] }
 ndarray-rand   = "0.15"
 rand           = "0.8"
-rayon = "*"
+rayon = "1"
 sprs = "*"
 ndarray-linalg = { version = "0.17.0", features = ["openblas"] } 
-nalgebra = { version = "0.33.2", features = ["std"] }
+nalgebra = { version = "0.32", features = ["std"] }
 qhull = "0.4.0"
-factorial = { version = "0.3.0", features = ["rayon"] }
+factorial = { version = "0.4.0" }
