--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ License: file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 ImportsFrom:
-  pbmcapply, seqinr, GenomicRanges, GenomeInfoDb, IRanges, S4Vectors, ggplot2
+  pbmcapply, seqinr, GenomicRanges, GenomeInfoDb, IRanges, S4Vectors, ggplot2, geometry
 RoxygenNote: 7.3.2
 Config/rextendr/version: 0.3.1.9000
 SystemRequirements: Cargo (rustc package manager)
