--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ importFrom(Seurat,CreateAssayObject)
 importFrom(Seurat,DefaultAssay)
 importFrom(Seurat,FindNeighbors)
 importFrom(Seurat,GetAssayData)
+importFrom(geometry,convhulln)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
