trying to improve performance in rust

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(getconsensus)
 export(pcha)
 export(pcha_rust)
 export(seurat_magic)
+export(t_ratio_test)
 importFrom(GenomeInfoDb,Seqinfo)
 importFrom(GenomicRanges,GRanges)
 importFrom(IRanges,IRanges)
@@ -28,5 +29,8 @@ importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,theme_bw)
 importFrom(pbmcapply,pbmclapply)
+importFrom(progressr,handlers)
+importFrom(progressr,progressor)
+importFrom(progressr,with_progress)
 importFrom(seqinr,read.fasta)
 useDynLib(rustytools, .registration = TRUE)
