--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -20,4 +20,5 @@ rayon = "1"
 sprs = "*"
 # qhull = "0.4.0"
 ndarray-stats = "0.5"
+once_cell = "1.0"
 # ndarray-linalg = { version = "0.17", features = ["openblas"] }
